[FIX] Align text content in swiper card

--- a/src/app/components/About/styles.module.scss
+++ b/src/app/components/About/styles.module.scss
@@ -5,6 +5,10 @@
   border-radius: 0.625rem;
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 0 0.625rem 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 
   h2 {
     margin-bottom: 0.8rem;
